<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- 1. اختصار الزر العائم (تشغيل / إخفاء) -->
    <shortcut
        android:shortcutId="floating_widget_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_floating_widget"
        android:shortcutShortLabel="@string/shortcut_floating_widget"
        android:shortcutLongLabel="@string/shortcut_floating_widget_long">
        <intent
            android:action="com.aboakbar.admin.ACTION_TOGGLE_FLOATING_WIDGET"
            android:targetPackage="com.aboakbar.admin"
            android:targetClass="com.aboakbar.admin.FloatingWidgetActionActivity" />
    </shortcut>

    <!-- 2. اختصار المساعد الذكي AI -->
    <shortcut
        android:shortcutId="ai_assistant_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_ai_shortcut"
        android:shortcutShortLabel="@string/shortcut_ai_short"
        android:shortcutLongLabel="@string/shortcut_ai_long">
        <intent
            android:action="com.aboakbar.admin.ACTION_OPEN_FLOATING_AI"
            android:targetPackage="com.aboakbar.admin"
            android:targetClass="com.aboakbar.admin.FloatingAiChatActivity" />
    </shortcut>

    <!-- 3. اختصار إضافة طلب جديد -->
    <shortcut
        android:shortcutId="add_order_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_add_order_shortcut"
        android:shortcutShortLabel="@string/shortcut_add_order"
        android:shortcutLongLabel="@string/shortcut_add_order_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.aboakbar.admin"
            android:targetClass="com.aboakbar.admin.MainActivity">
            <extra
                android:name="OPEN_URL"
                android:value="https://aboakbr.com/abo1stor3hlaa2kbr8-47/orders/new" />
        </intent>
    </shortcut>

    <!-- 4. اختصار إدارة الطلبات -->
    <shortcut
        android:shortcutId="orders_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_orders_shortcut"
        android:shortcutShortLabel="@string/shortcut_orders"
        android:shortcutLongLabel="@string/shortcut_orders_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.aboakbar.admin"
            android:targetClass="com.aboakbar.admin.MainActivity">
            <extra
                android:name="OPEN_URL"
                android:value="https://aboakbr.com/abo1stor3hlaa2kbr8-47/orders/pending" />
        </intent>
    </shortcut>

</shortcuts>
